[package]
name = "rtop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros", "ws"]}
serde_json = "1.0.108"
sysinfo = "0.29.10"
tokio = { version = "1.33.0", features = ["full"] }
